--- a/css/styles.css
+++ b/css/styles.css
@@ -10,9 +10,15 @@
 }
 
 body {
-	background-color: #ffffff;
+	background-color: var(--text-title-hero);
 	color: var(--primery-text-color);
 	font-family: Roboto, sans-serif;
+	font-size: 14px;
+	letter-spacing: 00.03em;
+}
+
+.arisual-hidden {
+	visibility: hidden;
 }
 
 .list {
@@ -53,10 +59,9 @@ a {
 	color: var(--title-text-color);
 }
 
-.site-nav .link:hover,
-.contacts-head a:hover,
-.site-nav .link:focus,
-.contacts-head a:focus {
+
+.contacts-head .email:hover,
+.contacts-head .email:focus {
 	color: var(--accent-color);
 }
 
@@ -67,8 +72,7 @@ a {
 .site-nav,
 .contacts-head {
 	font-weight: 500px;
-	font-size: 14px;
-	line-height: 1.14em;
+	line-height: 1.14;
 	letter-spacing: 0.02em;
 }
 
@@ -95,7 +99,7 @@ a {
 
 	font-weight: 700;
 	font-size: 16px;
-	line-height: 1.88em;
+	line-height: 1.88;
 	text-align: center;
 	letter-spacing: 0.06em;
 }
@@ -108,24 +112,24 @@ a {
 .hero-title {
 	font-weight: 900;
 	font-size: 44px;
-	line-height: 1.36em;
+	line-height: 1.36;
 	text-align: center;
 	letter-spacing: 0.06em;
+	text-transform: uppercase;
 }
+
+
 
 /* main заголовки і абзаци */
 .benefits h3 {
 	font-weight: 700;
-	font-size: 14px;
-	line-height: 1.14em;
-	letter-spacing: 0.03em;
+	line-height: 1.14;
+	text-transform: uppercase;
 }
 
 .desc-item,
 .footer .list {
-	font-size: 14px;
 	line-height: 1.71em;
-	letter-spacing: 0.03em;
 }
 
 .benefits h2,
@@ -133,9 +137,8 @@ a {
 .team h2 {
 	font-weight: 700;
 	font-size: 36px;
-	line-height: 1.16em;
+	line-height: 1.16;
 	text-align: center;
-	letter-spacing: 0.03em;
 }
 
 .section.team {
@@ -145,16 +148,14 @@ a {
 .team h3 {
 	font-weight: 500;
 	font-size: 16px;
-	line-height: 1.18em;
+	line-height: 1.18;
 	text-align: center;
-	letter-spacing: 0.03em;
 }
 
 .team p {
 	font-size: 16px;
 	line-height: 1.18px;
 	text-align: center;
-	letter-spacing: 0.03em;
 }
 
 /* футер */
@@ -182,9 +183,8 @@ a {
 
 	font-weight: 500;
 	font-size: 16px;
-	line-height: 1.62em;
+	line-height: 1.62;
 	text-align: center;
-	letter-spacing: 0.03em;
 }
 
 .porf-button:hover,
@@ -198,7 +198,6 @@ a {
 
 	font-size: 16px;
 	line-height: 1.88px;
-	letter-spacing: 0.03em;
 }
 
 .filters h2 {
@@ -206,6 +205,6 @@ a {
 
 	font-weight: 700;
 	font-size: 18px;
-	line-height: 2em;
+	line-height: 2;
 	letter-spacing: 0.06em;
 }
